--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,11 @@ allprojects {
 }
 
 subprojects {
+    task baseFolderCreate {
+        sourceSets*.resources.srcDirs*.each { it.exists() ? println("already exists dir ${it}") : it.mkdirs() }
+        sourceSets*.java.srcDirs*.each { it.exists() ? println("already exists dir ${it}") : it.mkdirs() }
+    }
+
     group = 'com.dharma'
     version = '0.0.1-SNAPSHOT'
     sourceCompatibility = JavaVersion.VERSION_17
@@ -25,10 +30,10 @@ subprojects {
 
     dependencies {
 	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
-	implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.1.0'
+	//implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.1.0'
 
 	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams
-	implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '3.1.0'
+	//implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '3.1.0'
     }
 
     test {
@@ -40,11 +45,6 @@ dockerCompose {
     useComposeFiles = ['docker-compose.yml']
     waitForTcpPorts = true
     projectName = project.name
-}
-
-project.subprojects.each { subProject ->
-    subProject.test.dependsOn composeUp
-    subProject.test.finalizedBy composeDown
 }
 
 tasks.named("wrapper") {
